# ditis

./: .gitignore  .tauriignore  AGENTS.md  CHANGELOG.md  LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json  vitest.config.js
.github/workflows/: release.yml
css/: styles.css
js/: app.js  columnOps.js  constants.js  dialog.js  edit.js  errorHandler.js  export.js  fileOperations.js  frameOps.js  history.js  i18n.js  keyboard.js  menuHandler.js  parsers.js  print.js  render.js  selection.js  sheetManager.js  stateManager.js  tauriApi.js  theme.js  updater.js  utils.js  version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/templates/: installer.nsi
test/: automated-test.js  boundary-selection.test.js  comprehensive-test.js  debug-fixes.test.js  debug-wasd.js  frameops-state.test.js  history.test.js  i18n.test.js  keyboard-sequence.test.js  keyboard-shortcuts.test.js  manual-test-checklist.md  menu-and-paste.test.js  menu-events.test.js  puppeteer-test.js  quality-improvement-plan.md  setup.js  test-column-swap.js  test-optimization.js  updater.test.js  virtual-scroll-test.html
test/unit/: csp-autosave.test.js  render.test.js  selection.test.js  utils.test.js
tools/: bump-version.js  merge-all-branches.ps1  sync-dist.js  test-all-branches.ps1
